src/test/ui/self/self-impl.stderr
error[E0223]: ambiguous associated type
  --> $DIR/self-impl.rs:23:16
   |
LL |         let _: <Self>::Baz = true;
   |                ^^^^^^^^^^^ help: use fully-qualified syntax: `<Bar as Trait>::Baz`

error[E0223]: ambiguous associated type
  --> $DIR/self-impl.rs:25:16
   |
LL |         let _: Self::Baz = true;
   |                ^^^^^^^^^ help: use fully-qualified syntax: `<Bar as Trait>::Baz`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0223`.
